--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,10 @@ h1, h2, h3, h4 {
 }
 
 blockquote {
-	font: 600 24px/34px 'Garamond', serif;
+	/*font: 600 24px/34px 'Garamond', serif;*/
+font: 600 16px/24px 'Garamond', serif;
+text-align: justify;
+word-spacing: -1px;
 }
 
 figcaption {
@@ -128,4 +131,52 @@ figcaption {
 
 th {
 	border:none !important;
+}
+
+p.itl { 
+  font-family: 'Garamond', serif;
+  font-size: 20px; 
+  line-height: 150%;
+  font-style: italic;
+  word-spacing: 1px;
+  letter-spacing: 0.75px;
+}
+
+.height--50 {
+	height: 50px ;
+}
+ th#indonesia p:nth-child(2){
+line-height: 50px;
+}
+
+figure figcaption {
+ width: 85%;
+ font-weight: bold;
+ margin-bottom: 4%;
+ padding-bottom: 3%;
+ border-bottom: 1px solid rgb(150, 150, 150);
+}
+
+button {
+	color: #03A9F4;
+}
+
+th#china { 
+	width: 110px; 
+}
+
+th#rwanda {
+	width: 100px;
+}
+
+th#indonesia {
+	width: 105px;
+}
+
+th#pakistan {
+	width: 82px;
+}
+
+#widgetTable p {
+	text-align: center;
 }
